<resources>
    <string name="app_name">RoomDatabaseSqlite</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="register_title">Registro de Animales</string>
    <string name="animal_name">Nombre</string>
    <string name="button_save">Guardar</string>
    <string name="animal_title">Animal</string>
    <string name="animal_description">Descripción</string>
    <string name="animal_continent">Continente</string>

    <string name="register_continent_title">Registro de Continentes</string>
    <string name="continent_name">Continente</string>


    <string name="action_continents">Continentes</string>

    <string name="tab_animals">Animales</string>
    <string name="tab_continents">Continentes</string>

</resources>
